--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo-container"><img src="/public/icons/pinterest_logo.png" alt="Pinterest Logo" id="logo">
+        <div class="logo-container"><img src="/icons/pinterest_logo.png" alt="Pinterest Logo" id="logo">
         </div>
         <div class="header-container">
             <nav class="explore-nav">
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <form class="search" id="search-form">
-                <button class="search-button" type="submit"><img src="/public/icons/search_icon.png" alt="Search button" id="search-icon"></button>
+                <button class="search-button" type="submit"><img src="/icons/search_icon.png" alt="Search button" id="search-icon"></button>
                 <input type="text" placeholder="Buscar" class="search-bar" id="search-input">
             </form>
             <ul class="personal">
